# ferrum-os

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
binaries/: busybox  hello_musl  user.ld
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: allocator.rs  ap_boot.rs  ap_boot.s  apic.rs  elf.rs  fd.rs  gdt.rs  heap.rs  initramfs.rs  interrupts.rs  main.rs  page_owner.rs  paging.rs  pic.rs  pipe.rs  process.rs  spinlock.rs  syscall.rs  tests.rs  vma.rs
kernel/src/driver/: serial.rs
kernel/src/fs/: mod.rs  procfs.rs  ramfs.rs  vfs.rs
scripts/: launch.sh  make_initramfs.sh
userland/: Cargo.toml  build.sh
userland/.cargo/: config.toml
userland/src/: lib.rs
