[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.15"
uart_16550 = "0.3"
spin = "0.9"
uefi = "0.33"
bitflags = "2.0"

[build-dependencies]
cc = "1.0"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1

[profile.release.package."x86_64"]
opt-level = 0

[profile.release.package."core"]
opt-level = 0